# ebay-assignment

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: database.py  main.py  models.py
app/api/: listings.py  utils.py
app/schemas/: request.py  response.py
app/tests/: conftest.py  test_listings_integration.py
bruno/: Get Listings.bru  Upsert Listings.bru
