[project]
name = "ebay-lite"
version = "0.1.0"
description = "A lightweight eBay API client using FastAPI + PostgreSQL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pre-commit>=4.2.0",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.1.0",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.34.3",
]
