[project]
name = "ebay-lite"
version = "0.1.0"
description = "A lightweight eBay API client using FastAPI + PostgreSQL"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pre-commit>=4.2.0",
    "psycopg[binary]>=3.2.9",
    "pytest>=8.4.0",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.34.3",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
